# ulbn

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh_CN.md  test.cpp  ulbn.c  ulbn.h  ulbn.hpp  ulbn_build.cpp
.github/workflows/: test_cxx20.yml
example/: example_c.c  example_cpp.cpp
test/: CMakeLists.txt  test.cpp
test/bound/: CMakeLists.txt  arithmetic_operation.c  build.c  test.h
test/cxx20/: CMakeLists.txt  arithmetic_operation.cpp  bit_operation.cpp  cast_from.cpp  cast_to.cpp  compare.cpp  divmod_2exp.cpp  number_theory.cpp  other.cpp  pow_root.cpp  random.cpp  test.hpp  test_arithmetic_operation.cpp  test_bit_operation.cpp  test_cast_from.cpp  test_cast_to.cpp  test_compare.cpp  test_number_theory.cpp  test_random.cpp
test/cxx20-limb16/: CMakeLists.txt  build.c
test/cxx20-limb32/: CMakeLists.txt  build.c
test/cxx20-limb8/: CMakeLists.txt  build.c
test_build/: ulbn_build_hpp.cpp
